test/integration/models/proto_error_response.go
// Code generated by go-swagger; DO NOT EDIT.

package models

// This file was generated by the swagger tool.
// Editing this file might prove futile when you re-run the swagger generate command

import (
	"context"

	"github.com/go-openapi/strfmt"
	"github.com/go-openapi/swag"
)

// ProtoErrorResponse proto error response
//
// swagger:model protoErrorResponse
type ProtoErrorResponse struct {

	// error
	Error string `json:"error,omitempty"`
}

// Validate validates this proto error response
func (m *ProtoErrorResponse) Validate(formats strfmt.Registry) error {
	return nil
}

// ContextValidate validates this proto error response based on context it is used
func (m *ProtoErrorResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
	return nil
}

// MarshalBinary interface implementation
func (m *ProtoErrorResponse) MarshalBinary() ([]byte, error) {
	if m == nil {
		return nil, nil
	}
	return swag.WriteJSON(m)
}

// UnmarshalBinary interface implementation
func (m *ProtoErrorResponse) UnmarshalBinary(b []byte) error {
	var res ProtoErrorResponse
	if err := swag.ReadJSON(b, &res); err != nil {
		return err
	}
	*m = res
	return nil
}
